@@ -3,3 +3,4 @@ DESCRIPTION = Makefly discovering
 DATE = 2012-06-29
 TAGS = makefly, news
 TYPE = news
+AUTHOR = blankoworld
