@@ -3,3 +3,4 @@ DESCRIPTION = Makefly is now available on the web
 DATE = 2012-07-04
 TAGS = news, web
 TYPE = special
+AUTHOR = The best long pseudo I ever seen
