@@ -13,3 +13,4 @@ LINKS_TITLE = Links
 READ_MORE = Read more
 SEARCH_BAR_CONTENT = Search
 SEARCH_BAR_BUTTON_NAME = Search
+AUTHOR_LABEL = Author
